# foxgen

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: bootstrap-lock.yml  ci.yml  deploy-production.yml
deploy/: production.env.example
docs/: architecture.md  billing.md  github-environment-setup.md  model-matrix.md  production-deploy.md
migrations/: env.py
migrations/versions/: 20260723_0001_initial.py  20260723_0002_secure_submissions.py  20260723_0003_generation_outbox.py  20260723_0004_media_delivery.py  20260723_0005_billing_ledger.py
scripts/: check_lock.py  deploy-production.sh
src/foxgen/: __init__.py  cli.py  worker.py
src/foxgen/api/: app.py  billing.py  security.py
src/foxgen/application/: __init__.py  billing.py  delivery.py  lifecycle.py  media.py  submissions.py
src/foxgen/bot/: api_client.py  app.py  catalog.py  (+4 more)
tests/: test_api.py  test_billing_api.py  test_bot.py  test_bot_api_client.py  test_bot_keyboards.py  test_bot_payloads.py  test_catalog.py  test_config.py  test_contracts.py  test_exact_model_contracts.py  test_generation_worker.py  test_kie_client.py  test_media_pipeline.py  test_model_api.py  test_model_contract_fixtures.py  test_model_service.py  test_model_submission_gate.py  test_production_deploy_assets.py  test_submission_security.py  test_submission_service.py  test_webhooks.py
tests/fixtures/: kie_priority_contract_examples.json
tests/integration/: test_real_infrastructure.py
(+18 files in other folders)
