[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "foxgen"
version = "0.1.0"
description = "Multimodal AI generation platform for Telegram powered by KIE.ai"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bambale0" }]
dependencies = [
  "aiogram>=3.20,<4",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.7,<3",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24,<26",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
foxgen-api = "foxgen.cli:run_api"
foxgen-bot = "foxgen.cli:run_bot"
foxgen-worker = "foxgen.cli:run_worker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiogram.*"]
disallow_untyped_decorators = false
